# piculet

./: Dockerfile  README.md  config.toml  docker-compose.yml
.devcontainer/: Dockerfile  devcontainer.json  docker-compose.yml
crates/db/: Cargo.toml  build.rs  schema.sql
crates/db/migrations/: 20240419165759_user_tables.sql
crates/db/queries/: users.sql
crates/db/src/: lib.rs
crates/server/: Cargo.toml
crates/server/src/: config.rs  errors.rs  logger.rs  main.rs  variables.rs
crates/server/src/api/: mod.rs
crates/server/src/api/auth/: login.rs  mod.rs
crates/server/src/dao/: base.rs  mod.rs  user.rs
crates/server/src/utils/: path.rs
